--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "postcss-loader": "^7.0.2",
     "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.6",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
